[package]
name = "prsql-chumsky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
ariadne = "0.1.5"
sqlformat = "0.2.0"

[dependencies.sqlparser]
features = ["serde"]
version = "0.18.0"
